Fix: Actors left alignment

--- a/styles/components/credits.less
+++ b/styles/components/credits.less
@@ -169,7 +169,7 @@
 
         .swiper-wrapper {
             width: min-content;
-            margin: auto 0 0 auto;
+            margin: auto 0 auto;
             padding: 4px 0;
         }
 
